--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-TODO
+Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals.
