--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Supercell program: a combinatorial structure-generation approach for the local-level modeling of atomic substitutions and partial occupancies in crystals.
+
+The supercell program paper (open-access):
+http://jcheminf.springeropen.com/articles/10.1186/s13321-016-0129-3
+
+Compiled program + manual:
+https://orex.github.io/supercell/
