Fix tutorial figure

--- a/doc/tutorial/supercell_tutorial.tex
+++ b/doc/tutorial/supercell_tutorial.tex
@@ -323,7 +323,7 @@ The adequacy of the structure to the SQS criteria is indicated by how close thes
   \caption{ Crystal structure of ice \ce{I_h}. Cell 1x1x2. Hydrogen sites connected to the same oxygen atoms are displayed with the same color, each color being associated in this initial structure to a different H-atom label (from H1 to H8). }   
   
   \centering
-  %\includegraphics[scale=0.20]{figures/ice-Ih/ice-Ih-121-adv.png}
+  \includegraphics[scale=0.20]{figures/ice-Ih-121-adv.png}
   
   \label{fig:iceIh-adv}
 \end{figure}
