--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,5 @@
+You can find a compiled program for all 64 bits Linux and MacOS at https://orex.github.io/supercell/ site. 
+
 IMPORTANT!!! Please note, that not all version of OpenBabel support partial occupancies. Please, use the version from https://github.com/openbabel/openbabel
 
 Superquick installation.
