--- a/doc/man/supercell.1
+++ b/doc/man/supercell.1
@@ -1,5 +1,5 @@
 '\" t
-.\" Manual page created with latex2man on Tue Sep  1 10:12:26 CEST 2015
+.\" Manual page created with latex2man on Thu Jan 24 00:37:38 2019
 .\" NOTE: This file is generated, DO NOT EDIT.
 .de Vb
 .ft CW
@@ -10,7 +10,7 @@
 
 .fi
 ..
-.TH "SUPERCELL" "1" "2015/09/01" "Scientific Tools " "Scientific Tools "
+.TH "SUPERCELL" "1" "2019/01/23" "Scientific Tools " "Scientific Tools "
 .SH NAME
 
 .PP
@@ -21,65 +21,65 @@ is a tool to convert a crystallographic structure with partial occupancy and/or 
 
 .PP
 .TP
-supercell
+ supercell
 \fB\-h, --help\fP
 .TP
-supercell
+ supercell
 [\fBOPTIONS\fP]
 \fB\-i \fP\fIinput\-file\fP
 .TP
-supercell
+ supercell
 [\fBOPTIONS\fP]
 \fB--input=\fP\fIinput\-file\fP
 .PP
 .SH DESCRIPTION
 
-Disordered compounds are very important now for fundamental science and industrial applications, but most of the methods of exploring solid state material properties required ideal periodicity. In opposite of many reported research, which implies periodicity to disordered system ``by hand\&'' and ad\-hoc the program supercell
-allows to apply the approximation systematically with all\-in\-one algorithms implemented for structure manipulation, supercell generation, permutations of atoms and vacancies, charge\-balancing, detecting symmetry equivalent structures, Coulomb energy calculations and sampling output data. The advantages of the program is fast\-algorithms implementation and availability under GPL license. 
+Disordered compounds are very important now for fundamental science and industrial applications, but most of the methods of exploring solid state material properties require ideal periodicity. In opposite of many reported research, which imply periodicity to disordered system ``by hand\&'' and ad\-hoc the program supercell
+allows to apply the approximation systematically with all\-in\-one algorithms implemented for structure manipulation, supercell generation, permutations of atoms and vacancies, charge\-balancing, detecting symmetry equivalent structures, Coulomb energy calculations and sampling output data. The advantages of the program are fast\-algorithms implementation and availability under GPL license. 
 .PP
 .SH OPTIONS
 
 .PP
 .TP
 \fB\-h\fP, \fB--help\fP
-Print help message and exit the program. 
+ Print help message and exit the program. 
 .PP
 .TP
 \fB\-v \fP\fIlevel\fP, \fB--verbose=\fP\fIlevel\fP
-Change verbosity level from default 1. Level 0 \- quiet mode, only error output. Level 1 suggested for regular users. Higher levels suggested to developers, bug tracking and long program execution times. 
+ Change verbosity level from default 1. Level 0 \- quiet mode, only error output. Level 1 is suggested for regular users. Higher levels suggested for developers, bug tracking and long program execution times. 
 .PP
 .TP
 \fB\-i \fP\fIinput\-file\fP, \fB--input=\fP\fIinput\-file\fP
-Required option. Input file in CIF format. Only one file can be specified. 
+ Required option. Input file in CIF format. Only one file can be specified. 
 .PP
 .TP
 \fB\-d\fP, \fB--dry\-run\fP
-The option is highly recommended for the first run of the program with new input specified. 
+ The option is highly recommended for the first run of the program with new input specified. 
 With the option the program will do everything but write the files. Be careful if you switched \fB\-m\fP,
-\fB--merge\-by\-distance\fP
+\fB--merge\-symmetric\fP
 option: the program will go through all crystal structures, so even the dry\-run mode can take time. 
 .PP
 .TP
 \fB\-s \fP\fIcell\-size\fP, \fB--cell\-size=\fP\fIcell\-size\fP
-The option specifies the size of the supercell. The format is AxBxC, where A, B, C are positive integer multipliers of \fBa\fP,
+ The option specifies the size of the supercell. The format is AxBxC, where A, B, C are positive integer multipliers of \fBa\fP,
 \fBb\fP
 and \fBc\fP
 unit cell vectors of input system. Default is "1x1x1". 
 .PP
 .TP
 \fB\-c \fP\fIbalance\-type\fP, \fB--charge\-balance=\fP\fIbalance\-type\fP
-The option helps you to charge balance the system. Be careful, charge balancing with wrong input charges will make output system composition far from desired or it even can freeze the program. Charges (i.e. oxydation states) may be specified with the \fB\-p\fP,
+ The option helps to balance charges of the structure. Be careful, charge balancing with wrong input charges will make output system composition far from desired or it can even freeze the program. Charges (i.e. oxydation states) may be specified with the \fB\-p\fP,
 \fB--labels\-properties\fP
 option (see below) or directly in the CIF file ("_atom_type_oxidation_number"). The possible arguments are: 
 .RS
 .TP
-no
+no 
 No charge balancing. The option will set all charges to zero. 
 .TP
-try
+try 
 Default. Try to charge balance system, if initial system is not charged. 
 .TP
-yes
+yes 
 Charge balance the system. 
 .RE
 .RS
@@ -87,7 +87,7 @@ Charge balance the system.
 .RE
 .TP
 \fB\-p \fP\fIlabels\-properties\fP, \fB--property=\fP\fIlabels\-properties\fP
-The option will allow you to manually specify some properties of atoms with specific labels. You may use the simple or the extended syntax. 
+ The option will allow you to manually specify some properties of atoms with specific labels. You may use the simple or the extended syntax. 
 .RS
 .TP
 .B *
@@ -98,17 +98,17 @@ Extended: "<OPT>(<labels>):{<properties>}" (Do not forget to put extended syntax
 .RE
 .RS
 .PP
-Where <label> is the label of the crystallographic site, the properties of which you want to change, <labels> set of space\-separated labels. <OPT> is the type of string\-pprocessing you want use to set the labels. The possible values of <OPT> are: 
+Where <label> is the label of the crystallographic site, the properties of which you want to change, <labels> set of space\-separated labels. <OPT> is the type of string processing you want use to set the labels. The possible values of <OPT> are: 
 .RS
 .RE
 .TP
-p
+p 
 Treat the labels in parenthesis like a plain string. 
 .TP
-w, ""
+w, "" 
 Default for simple syntax. Treat the labels in parenthesis like a wild card. For example, N* means all labels, starting with N: N1, N12, but also Na3. You can use * (any numbers of any symbol) and ? (any symbol: exactly one). 
 .TP
-r
+r 
 Treat the labels in parenthesis like a Perl Regex. Syntax description can be found at \fBhttp://en.wikipedia.org/wiki/Regular_expression\fP\&.
 .RE
 .RS
@@ -117,13 +117,13 @@ The <property_name> is the name of the property you want to set for all specifie
 .RS
 .RE
 .TP
-c[harge]
+c[harge] 
 Set the charge of atoms with specified label(s). Floating\-point value in elementary charge units. 
 .TP
-p[opulation]
+p[opulation] 
 Number of atoms with specific label(s) in output supercell structure. 
 .TP
-[not]fixed
+[not]fixed 
 Exclude crystallographic sites from the combinatorial analysis. The output supercell file will contain partial occupancies for the corresponding sites (if there were partial occupancies in the original structures). 
 .RE
 .RS
@@ -133,33 +133,33 @@ Some fancy examples can be found below.
 .RE
 .TP
 \fB\-t \fP\fItolerance\fP, \fB--tolerance=\fP\fItolerance\fP
-The argument of the option specifies the maximum distance (in Angstroms) between sites that should be contained within the same group (meaning that the corresponding positions in the supercell cannot be occupied simultaneously). Check carefully the minimal distance between 2 atoms assigned to different groups, which is written in the output of supercell
+ The argument of the option specifies the maximum distance (in Angstroms) between sites that should be contained within the same group (meaning that the corresponding positions in the supercell cannot be occupied simultaneously). Check carefully the minimal distance between 2 atoms assigned to different groups, which is written in the output of supercell
 before changing this parameter. Default \fB\fP\fItolerance\fP=0.75
 A. 
 .PP
 .TP
-\fB\-m\fP, \fB--merge\-by\-distance\fP
-The options enables the symmetry\-check algorithm on output structures. Structures that can be transform to each other using crystallographic symmetry operations will be merged and stored as one structure. For cases with more than 10^4 total combinations it is recommended to use verbosity level 2 or higher to trace program execution. 
+\fB\-m\fP, \fB--merge\-symmetric\fP
+ The option enables the symmetry check algorithm on output structures. Structures that can be transformed to each other using crystallographic symmetry operations will be merged and stored as one structure. For cases with more than 10^4 total combinations it is recommended to use verbosity level 2 or higher to trace program execution. 
 .PP
 .TP
 \fB\-n \fP\fIselection\fP, \fB--store\-structures=\fP\fIselection\fP
-The option allows you to generate subsets of structures (rather than all) according to certain criteria (listed below). The option is very useful to both save disk space and facilitate navigation among files for large numbers combinations (typically more than 10^5).The argument of the option has special structure <sampling type><count>\&. The <count> is a positive integer value or zero. <sampling type> is a letter which sets the sampling (selection) mode: 
+ The option allows you to generate subsets of structures (rather than all) according to certain criteria (listed below). The option is very useful to both save disk space and facilitate navigation among files for large numbers combinations (typically more than 10^5).The argument of the option has special structure <sampling type><count>\&. The <count> is a positive integer value or zero. <sampling type> is a letter which sets the sampling (selection) mode: 
 .RS
 .TP
-r
+r 
 : select <count> random structures. 
 .TP
-f
+f 
 : select <count> first structures. 
 .TP
-a
+a 
 : select <count> last structures. 
 .TP
-l
+l 
 : select <count> low energy structures (\fB--coulomb\-energy\fP
 option required). 
 .TP
-h
+h 
 : select <count> high energy structures (\fB--coulomb\-energy\fP
 option required). 
 .RE
@@ -172,17 +172,17 @@ Multiple declaration of the option is allowed. If the option is enabled, an extr
 .RE
 .TP
 \fB\-q\fP, \fB--coulomb\-energy\fP
-The option enable Coulumb energy calculations. The result energies for each structures are stored in file <output\-prefix>_coulomb_energy.txt. The energies can help to consider the relevant regular structures for following calculations. Ewald summation algorithm is used for the calculations. Be careful, in case of charged cell the energy values can be meanless. See also \fB--charge\-balance\fP
+ The option enable Coulomb energy calculations. The result energies for each structure are stored in file <output\-prefix>_coulomb_energy.txt. The energies can help to consider the relevant regular structures for following calculations. Ewald summation algorithm is used for the calculations. Be careful, in case of charged cell the energy values can be meanless. See also \fB--charge\-balance\fP
 option. 
 .PP
 .TP
 \fB\-o \fP\fIoutput\-prefix\fP, \fB--output\-prefix=\fP\fIoutput\-prefix\fP
-The options specify output file name prefix. The prefix can contain folder name but the folder should be created before run the program. For example, --output\-prefix=myfolder/myfiles. The output files will be created according to templates. For non merging run the template will be <output\-prefix>_i<sampling type><index>\&.cif. For merging run the template will be <output\-prefix>_i<sampling type><index>_w<weight>\&.cif, where <weight> \- number of the structures merged to the structure. Be careful, all existing files with mask "<output\-prefix>*.cif" will be deleted during not dry\-run. The <output\-prefix>_coulomb_energy.txt file will be overwritten only in case of \fB--coulomb\-energy\fP
+ The options specify output file name prefix. The prefix can contain folder name but the folder should be created before run the program. For example, --output\-prefix=myfolder/myfiles. The output files will be created according to templates. For non merging run the template will be <output\-prefix>_i<sampling type><index>\&.cif. For merging run the template will be <output\-prefix>_i<sampling type><index>_w<weight>\&.cif, where <weight> \- number of the structures merged to the structure. Be careful, all existing files with mask "<output\-prefix>*.cif" will be deleted during not dry\-run. The <output\-prefix>_coulomb_energy.txt file will be overwritten only in case of \fB--coulomb\-energy\fP
 option enabled. 
 .PP
 .TP
 \fB\-a \fP\fIarchive\-file\fP, \fB--archive=\fP\fIarchive\-file\fP
-The option specify a target archive file for the output files, except energy file for all permuted configurations. If archive\-file string is empty (default) no packing will be performed and all files will be stored directly to disk. If the file with the name exist it will be overwriting. This optional feature required libarchive
+ The option specifies a target archive file name for the output files, except energy file for all permuted configurations. If archive\-file string is empty (default) no packing will be performed and all files will be stored directly to disk. If the file with the name exist it will be overwriting. This optional feature required libarchive
 \fBhttp://www.libarchive.org/\fP
 to be available in the system. Otherwise the option will be disabled. Check the status by \fB\-h\fP
 option. The extension of the file should be set according to desired archive type: ``.zip\&'', ``.tar\&'', ``.tgz\&'', ``.tar.gz\&'', ``.tar.bz2\&'', ``.tar.xz\&''\&. 
@@ -230,28 +230,29 @@ folder.
 
 .PP
 .TP
-openbabel
+openbabel 
 Required. 
 .TP
-libeigen
+libeigen 
 Required. 
 .TP
-libarchive
+libarchive 
 Optional. 
 .PP
 .SH BUGS AND LIMITATIONS
 
 .PP
 .TP
-Supercell size limitation.
-The maximum number of permutations should not exceed limit of 800 million. If more, the program will return a error. If the number of permutations within the groups is less than the limit, but total number of combinations is above the limit, the pro gram can be executed step\-by\-step with some groups excluded from permutation. Due to rapid increasing of number of combination with changing cell size the program can crash with arithmetic overflow at large cell, when number of combination more than 2^{63} (around 10^{18}) due to finite size integer variables in the program. 
+Supercell size limitation. 
+The maximum number of permutations should not exceed limit of 10^{15} (\fBdouble\fP
+variable limit). If more, the program will return an error. The value is far beyond a reasonable limit due to calculation time. The average program performance is about 10\-100 billion structures per day with standard desktop processor. 
 .TP
-Filesystem limitation.
+Filesystem limitation. 
 Although, supercell
 can produce millions of files, most of the filesystems can\&'t manage more than one thousand files in one folder with acceptable performance. Be careful, if you need to process a lot of combination, sample them or use \fB\-a\fP
 option. 
 .TP
-Symmetry information handling in input file.
+Symmetry information handling in input file. 
 Our program used openbabel
 libraries to handle symmetry operations in input file. The algorithm, implemented there, gives wrong result for some structures. The problem can be fully solved by converting input file to P1 structure with any other software. In most of the cases, the problem can be solved by removing "_space_group_IT_number" tag from input cif file. 
 .PP
@@ -263,22 +264,22 @@ libraries to handle symmetry operations in input file. The algorithm, implemente
 .SH VERSION
 
 .PP
-Version: 1.0 of 2015/09/01\&.
+Version: 1.1 of 2019/01/23\&.
 .PP
 .SH LICENSE AND COPYRIGHT
 
 .PP
 .TP
-Copyright
+Copyright 
 All rights to the program belongs to authors. 
 .PP
 .TP
-License
+License 
 This program can be redistributed and/or modified under the 
 terms of the GNU GENERAL PUBLIC LICENSE Version 2. 
 .PP
 .TP
-Misc
+Misc 
 The actual version of supercell
 may be found on my homepage
 .br
@@ -287,11 +288,11 @@ may be found on my homepage
 .SH AUTHOR
 
 .TP
-Kirill Okhotnikov
+Kirill Okhotnikov 
 e\-mail: \fBkirill.okhotnikov@gmail.com\fP
 .PP
 .TP
-Dr. Sylvian Cadars
+Dr. Sylvian Cadars 
 e\-mail: \fBsylvian.cadars@cnrs\-imn.fr\fP
 .br
 Institut des Materiaux Jean Rouxel (IMN) \- UMR6502
