Manual fix: requirement of the program.

--- a/doc/man/supercell.1
+++ b/doc/man/supercell.1
@@ -1,5 +1,5 @@
 '\" t
-.\" Manual page created with latex2man on Thu Jan 24 00:37:38 2019
+.\" Manual page created with latex2man on Wed Feb  6 00:02:36 2019
 .\" NOTE: This file is generated, DO NOT EDIT.
 .de Vb
 .ft CW
@@ -228,16 +228,10 @@ folder.
 .PP
 .SH REQUIREMENTS
 
-.PP
-.TP
-openbabel 
-Required. 
-.TP
-libeigen 
-Required. 
-.TP
-libarchive 
-Optional. 
+Compiled version of supercell
+from site \fBhttps://orex.github.io/supercell\fP
+is standard alone program for both Linux and MacOS systems, which neither required installation nor third\-party libraries to install. Please check supercell/INSTALL
+file, if you would like to compile program by yourself. 
 .PP
 .SH BUGS AND LIMITATIONS
 
@@ -283,7 +277,11 @@ Misc
 The actual version of supercell
 may be found on my homepage
 .br
-\fBhttps://github.com/orex/supercell\fP\&.
+\fBhttps://orex.github.io/supercell\fP\&.
+Please, use github site 
+.br
+\fBhttps://github.com/orex/supercell\fP
+to download the source code and submit a bug of the program. 
 .PP
 .SH AUTHOR
 
