--- a/doc/man/supercell_man.tex
+++ b/doc/man/supercell_man.tex
@@ -176,12 +176,7 @@ Some advances examples, with \Prog{supercell} embedded to bash scripts you can f
 
 \section{Requirements}
 %%%%%%%%%%%%%%%%%%%%%%
-
-\begin{description}\setlength{\itemsep}{0cm}
-\item[openbabel] Required.
-\item[libeigen] Required.
-\item[libarchive] Optional. 
-\end{description}
+Compiled version of \Prog{supercell} from site \URL{https://orex.github.io/supercell} is standard alone program for both Linux and MacOS systems, which neither required installation nor third-party libraries to install. Please check \File{supercell/INSTALL} file, if you would like to compile program by yourself.
 
 \section{Bugs and limitations}
 
@@ -218,7 +213,9 @@ Version: \Version\ of \Date.
 
 \item[Misc]
      The actual version of  \Prog{supercell} may be found on my homepage\\
-     \URL{https://github.com/orex/supercell}.
+     \URL{https://orex.github.io/supercell}. Please, use github site \\
+     \URL{https://github.com/orex/supercell} 
+     to download the source code and submit a bug of the program. 
 
 \end{description}
 
@@ -242,3 +239,4 @@ Fax: +33 (0)2 40 37 39 95
 \LatexManEnd
 
 \end{document}
+
